--- a/_toc.yml
+++ b/_toc.yml
@@ -4,5 +4,5 @@
 format: jb-book
 root: index 
 chapters:
-- file: Chapter01.00-Introduction
-- file: Chapter01.01-What-is-Machine-Learning
+- file: notebooks/Chapter01.00-Introduction
+- file: notebooks/Chapter01.01-What-is-Machine-Learning
